# LexicalAnalyzerGenerator

./: .gitignore  CMakeLists.txt  Dfa.cpp  Dfa.h  GlobalStructures.h  InputLanguageParser.cpp  InputLanguageParser.h  InputParser.cpp  InputParser.h  MinimizedDfa.cpp  MinimizedDfa.h  Nfa.cpp  Nfa.h  OutputGenerator.cpp  OutputGenerator.h  State.cpp  State.h  Token.cpp  Token.h  main.cpp
